# gen-commit

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  scopes.txt
src/: analysis.rs  anthropic.rs  args.rs  client.rs  error.rs  file.rs  git.rs  logs.rs  main.rs  openai.rs  prompt.rs
