[package]
name = "gen-commit"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46", features = ["full"] }
thiserror = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"